correction columns in small screen

--- a/competences.html
+++ b/competences.html
@@ -22,7 +22,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
-              src="/img/cv-et-cv.png"
+              src="./img/cv-et-cv.png"
               alt="Logo"
               width="40"
               height="34"
@@ -43,12 +43,12 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link fs-3" aria-current="page" href="/index.html">Home</a>
-              <a class="nav-link fs-3" href="/experience.html">Expériences</a>
-              <a class="nav-link fs-3 active" href="/competences.html">Compétences</a>
-              <a class="nav-link fs-3" href="/formations.html">Formations</a>
-              <a class="nav-link fs-3" href="/extras.html">Extras</a>
-              <a class="nav-link fs-3" href="/contact.html">Contact</a>
+              <a class="nav-link fs-3" aria-current="page" href="./index.html">Home</a>
+              <a class="nav-link fs-3" href="./experience.html">Expériences</a>
+              <a class="nav-link fs-3 active" href="./competences.html">Compétences</a>
+              <a class="nav-link fs-3" href="./formations.html">Formations</a>
+              <a class="nav-link fs-3" href="./extras.html">Extras</a>
+              <a class="nav-link fs-3" href="./contact.html">Contact</a>
             </div>
           </div>
         </div>
@@ -65,7 +65,7 @@
                     <div class="row">
                         <div class=" col p-2 ">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/welding.png" class="card-img-top size-img-card" alt="microsoft office logo">
+                                <img src="./img/welding.png" class="card-img-top size-img-card" alt="microsoft office logo">
                                 <div class="card-body text-center">
                                   <p class="card-text">Soudure à l'arc, apprentissage sur site avec des anciens "sachants" qui ont étés mes tuteurs.</p>
                                 </div>
@@ -80,7 +80,7 @@
                         </div>
                         <div class="col p-2">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/automatisation.png" class="card-img-top size-img-card" alt="...">
+                                <img src="./img/automatisation.png" class="card-img-top size-img-card" alt="...">
                                 <div class="card-body text-center">
                                   <p class="card-text">Automatismes, mise en place et parametrage d'automates d' assistance à la conduite de grues à tour, de centrales à béton</p>
                                 </div>
@@ -95,7 +95,7 @@
                         </div>
                         <div class="col p-2 ">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/sauveteur.gif" class="card-img-top size-img-card" alt="...">
+                                <img src="./img/sauveteur.gif" class="card-img-top size-img-card" alt="...">
                                 <div class="card-body text-center">
                                   <p class="card-text">Sauveteur secouriste du travail depuis 20 ans, recyclages tous les 2 ans, formé à l'utilisation du défibrilateur</p>
                                 </div>
@@ -110,7 +110,7 @@
                         </div>
                         <div class="col p-2">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/GIMP-logo.png" class="card-img-top size-img-card" alt="...">
+                                <img src="./img/GIMP-logo.png" class="card-img-top size-img-card" alt="...">
                                 <div class="card-body text-center">
                                   <p class="card-text">Retouche photo, équivalent libre de Photoshop, bonne connaissance du soft pour usage courant et plus pointu.</p>
                                 </div>
@@ -125,7 +125,7 @@
                         </div>
                         <div class="col p-2">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/Libre-Office.webp" class="card-img-top size-img-card" alt="...">
+                                <img src="./img/Libre-Office.webp" class="card-img-top size-img-card" alt="...">
                                 <div class="card-body text-center">
                                   <p class="card-text">Utilisation régulière en privé du pack open source "libre office", bonne alternative au pack MS.</p>
                                 </div>
@@ -140,7 +140,7 @@
                         </div>
                         <div class="col p-2">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/mcs.png" class="card-img-top size-img-card" alt="...">
+                                <img src="./img/mcs.png" class="card-img-top size-img-card" alt="...">
                                 <div class="card-body text-center">
                                   <p class="card-text">Logiciel pro de gestion de location/vente de matériel, facturation, rapports d'activité, etc..., référent logiciel dans l'entreprise</p>
                                 </div>
@@ -155,9 +155,9 @@
                         </div>
                         <div class="col p-2">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/msOffice.png" class="card-img-top size-img-card" alt="...">
+                                <img src="./img/msOffice.png" class="card-img-top size-img-card" alt="...">
                                 <div class="card-body text-center">
-                                  <p class="card-text">Bonnes connaissances du pack office Microsoft, excel, word, teams, etc... en utilisation profeéssionnelle.</p>
+                                  <p class="card-text">Bonnes connaissances du pack office Microsoft, excel, word, teams, etc... en utilisation professionnelle.</p>
                                 </div>
                                 <div class="card-footer text-body-light mt-4">
                                     <i class="bi bi-star-fill text-info"></i>
@@ -170,7 +170,7 @@
                         </div>
                         <div class="col p-2">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/ubuntu-studio-logo.png" class="card-img-top size-img-card" alt="...">
+                                <img src="./img/ubuntu-studio-logo.png" class="card-img-top size-img-card" alt="...">
                                 <div class="card-body text-center">
                                   <p class="card-text">Ubuntu studio, logiciel de montage musical, enregistrements, création, arrangements, filtrage</p>
                                 </div>
