--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
-              src="/img/cv-et-cv.png"
+              src="./img/cv-et-cv.png"
               alt="Logo"
               width="40"
               height="34"
@@ -43,12 +43,12 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link fs-3" aria-current="page" href="/index.html">Home</a>
-              <a class="nav-link fs-3" href="/experience.html">Expériences</a>
-              <a class="nav-link fs-3" href="/competences.html">Compétences</a>
-              <a class="nav-link fs-3" href="/formations.html">Formations</a>
-              <a class="nav-link fs-3" href="/extras.html">Extras</a>
-              <a class="nav-link fs-3 active" href="/contact.html">Contact</a>
+              <a class="nav-link fs-3" aria-current="page" href="./index.html">Home</a>
+              <a class="nav-link fs-3" href="./experience.html">Expériences</a>
+              <a class="nav-link fs-3" href="./competences.html">Compétences</a>
+              <a class="nav-link fs-3" href="./formations.html">Formations</a>
+              <a class="nav-link fs-3" href="./extras.html">Extras</a>
+              <a class="nav-link fs-3 active" href="./contact.html">Contact</a>
             </div>
           </div>
         </div>
@@ -68,7 +68,7 @@
                         <div class="p-3">Tel: 06 59 25 05 37</div>
                       </div>
                       <div class="col text-info fs-2">
-                        <div class="p-3">mail: castellastro@gmail.com</div>
+                        <div class="p-3"><a href="mailto:castellastro@gmail.com">mail: castellastro@gmail.com</a></div>
                       </div>
                     </div>
                 </div>
