--- a/experience.html
+++ b/experience.html
@@ -22,7 +22,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
-              src="/img/cv-et-cv.png"
+              src="./img/cv-et-cv.png"
               alt="Logo"
               width="40"
               height="34"
@@ -43,12 +43,12 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link fs-3" aria-current="page" href="/index.html">Home</a>
-              <a class="nav-link fs-3 active" href="/experience.html">Experiences</a>
-              <a class="nav-link fs-3" href="/competences.html">Competences</a>
-              <a class="nav-link fs-3" href="/formations.html">Formations</a>
-              <a class="nav-link fs-3" href="/extras.html">Extras</a>
-              <a class="nav-link fs-3" href="/contact.html">Contact</a>
+              <a class="nav-link fs-3" aria-current="page" href="./index.html">Home</a>
+              <a class="nav-link fs-3 active" href="./experience.html">Experiences</a>
+              <a class="nav-link fs-3" href="./competences.html">Competences</a>
+              <a class="nav-link fs-3" href="./formations.html">Formations</a>
+              <a class="nav-link fs-3" href="./extras.html">Extras</a>
+              <a class="nav-link fs-3" href="./contact.html">Contact</a>
             </div>
           </div>
         </div>
@@ -59,7 +59,7 @@
         <div
           class="d-flex justify-content-center"
           id="text-presentation">
-          <div class="cols col-6 text-experience">
+          <div class="cols col-12 col-sm-10 col-xl-6 text-experience">
             <h3 class="experiences fs-1 text-center"><u>Mes experiences</u></h3>
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <div class="accordion-item border border-info">
