--- a/formations.html
+++ b/formations.html
@@ -22,7 +22,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
-              src="/img/cv-et-cv.png"
+              src="./img/cv-et-cv.png"
               alt="Logo"
               width="40"
               height="34"
@@ -43,12 +43,12 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link fs-3" aria-current="page" href="/index.html">Home</a>
-              <a class="nav-link fs-3" href="/experience.html">Expériences</a>
-              <a class="nav-link fs-3" href="/competences.html">Compétences</a>
-              <a class="nav-link fs-3 active" href="/formations.html">Formations</a>
-              <a class="nav-link fs-3" href="/extras.html">Extras</a>
-              <a class="nav-link fs-3" href="/contact.html">Contact</a>
+              <a class="nav-link fs-3" aria-current="page" href="./index.html">Home</a>
+              <a class="nav-link fs-3" href="./experience.html">Expériences</a>
+              <a class="nav-link fs-3" href="./competences.html">Compétences</a>
+              <a class="nav-link fs-3 active" href="./formations.html">Formations</a>
+              <a class="nav-link fs-3" href="./extras.html">Extras</a>
+              <a class="nav-link fs-3" href="./contact.html">Contact</a>
             </div>
           </div>
         </div>
@@ -64,12 +64,12 @@
                     <div class="row row-cols-1">
                         <div class=" col p-2">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/html-5.png" class="card-img-top size-img-card" alt="logo du language html-5">
-                                <img src="/img/css-3.png" class="card-img-top size-img-card" alt="logo du language css">
-                                <img src="/img/js.png" class="card-img-top size-img-card" alt="logo du language java script">
-                                <img src="/img/reactJS.png" class="card-img-top size-img-card" alt="logo bibliothèque front-end reactJS">
-                                <img src="/img/nodejs.png" class="card-img-top size-img-card" alt="logo bibliothèque back-end nodeJS">
-                                <img src="/img/bases-de-donnees.png" class="card-img-top size-img-card" alt="logo bases de données">
+                                <img src="./img/html-5.png" class="card-img-top size-img-card" alt="logo du language html-5">
+                                <img src="./img/css-3.png" class="card-img-top size-img-card" alt="logo du language css">
+                                <img src="./img/js.png" class="card-img-top size-img-card" alt="logo du language java script">
+                                <img src="./img/reactJS.png" class="card-img-top size-img-card" alt="logo bibliothèque front-end reactJS">
+                                <img src="./img/nodejs.png" class="card-img-top size-img-card" alt="logo bibliothèque back-end nodeJS">
+                                <img src="./img/bases-de-donnees.png" class="card-img-top size-img-card" alt="logo bases de données">
                                 <div class="card-body text-center">
                                   <p class="card-text"><strong><u class="text-info">Fevrier 2022 à aujourd'hui</u></strong> Formation en ligne via STUDI : Développeur web full stack, essentielement au language Javasript (bibliothèque ReactJS, nodeJS) et base de données SQL.</p>
                                 </div>
@@ -84,7 +84,7 @@
                         </div>
                         <div class="col p-2">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/mcs.png" class="card-img-top size-img-card" alt="logo entreprise MCS rm de gestion de matériel">
+                                <img src="./img/mcs.png" class="card-img-top size-img-card" alt="logo entreprise MCS rm de gestion de matériel">
                                 <div class="card-body text-center">
                                   <p class="card-text"><strong><u class="text-info">Juin et Septembre 2018</u></strong> Formation au logiciel de gestion de matériel (location, ventes, facturation, GMAO,...) MCSrm, référent entreprise, mise en forme de rapports, de documents.</p>
                                 </div>
@@ -99,7 +99,7 @@
                         </div>
                         <div class="col p-2 ">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/comptoir-des-langues.png" class="card-img-top size-img-card" alt="logo du comptoir des langues">
+                                <img src="./img/comptoir-des-langues.png" class="card-img-top size-img-card" alt="logo du comptoir des langues">
                                 <div class="card-body text-center">
                                   <p class="card-text"><strong><u class="text-info">2017 en 6 mois</u></strong> Formation à l'anglais avec "le comptoir des langues", formation en e-learning avec 40 heures de cours dispensé par un professeur via skype</p>
                                 </div>
@@ -114,7 +114,7 @@
                         </div>
                         <div class="col p-2">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/Bac-pro.webp" class="card-img-top size-img-card" alt="logo du bac pro">
+                                <img src="./img/Bac-pro.webp" class="card-img-top size-img-card" alt="logo du bac pro">
                                 <div class="card-body text-center">
                                   <p class="card-text"><strong><u class="text-info">2009 en 1 an</u></strong> Obtention du bac pro maintenance industrielle via une VAE. Support utilisé: Les suivis de maintenances préventives et curatives de grues à tour</p>
                                 </div>
@@ -129,7 +129,7 @@
                         </div>
                         <div class="col p-2">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/logo-smie.png" class="card-img-top size-img-card" alt="...">
+                                <img src="./img/logo-smie.png" class="card-img-top size-img-card" alt="...">
                                 <div class="card-body text-center">
                                   <p class="card-text"><strong><u class="text-info">Décembre 1995 1 semaine</u></strong> Une semaine de formation au sein de l'entreprise SMIE qui fabrique et commercialise des automates d'aides à la conduite de grues à tour</p>
                                 </div>
@@ -144,7 +144,7 @@
                         </div>  
                         <div class="col p-2">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/logo_educationnational.webp" class="card-img-top size-img-card" alt="logo education nationale">
+                                <img src="./img/logo_educationnational.webp" class="card-img-top size-img-card" alt="logo education nationale">
                                 <div class="card-body text-center">
                                   <p class="card-text"><strong><u class="text-info">1982 et 1983</u></strong> Obtention du CAP et BEP électromécanique au lycée Allede de Bethune</p>
                                 </div>
