--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
-              src="/img/cv-et-cv.png"
+              src="./img/cv-et-cv.png"
               alt="Logo"
               width="40"
               height="34"
@@ -44,11 +44,11 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link fs-3 active" aria-current="page"  href="#">Home</a>
-              <a class="nav-link fs-3" href="/experience.html">Expériences</a>
-              <a class="nav-link fs-3" href="/competences.html">Compétences</a>
-              <a class="nav-link fs-3" href="/formations.html">Formations</a>
-              <a class="nav-link fs-3" href="/extras.html">Extras</a>
-              <a class="nav-link fs-3" href="/contact.html">Contact</a>
+              <a class="nav-link fs-3" href="./experience.html">Expériences</a>
+              <a class="nav-link fs-3" href="./competences.html">Compétences</a>
+              <a class="nav-link fs-3" href="./formations.html">Formations</a>
+              <a class="nav-link fs-3" href="./extras.html">Extras</a>
+              <a class="nav-link fs-3" href="./contact.html">Contact</a>
             </div>
           </div>
         </div>
@@ -79,7 +79,7 @@
         <div class="container">
           <div class="row row-cols-1 row-cols-md-2 align-items-center pt-5 pb-5" id="about">
             <div> 
-              <img class="img-thumbnail" src="/img/ludo.jpg" width="350px" style="max-width: 100%;"/>
+              <img class="img-thumbnail" src="./img/ludo.jpg" width="350px" style="max-width: 100%;"/>
             </div>
             <div class="col pt-2 pb-2">
               <h3 class="text-center">Qui suis-je ?</h3>
