put the dropdown menu in front page with z-index

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <body class="bg-dark text-light">
     <header>
       <nav
-        class="position-fixed navbar navbar-expand-lg navbar-dark"
+        class="position-fixed navbar navbar-expand-lg navbar-dark z-3" 
       >
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="/img/CVLudo -du-03-02-23.pdf" target="_blank">
             <img
               src="./img/cv-et-cv.png"
               alt="Logo"
@@ -28,7 +28,7 @@
               height="34"
               class="d-inline-block align-text-center"
             />
-            <b>L.S.</b>
+            <b>Ludovic SCHIARATURA</b>
           </a>
           <button
             class="navbar-toggler"
@@ -54,7 +54,7 @@
         </div>
       </nav>
     </header>
-    <main class="container-fluid">
+    <main class="container-fluid z-1">
       <div class="row row-cols-1" id="firstRowHomePage">
         <div
           class="d-flex justify-content-center text-center flex-column"
