correcting tue rotation fill <i> without position status

--- a/experience.html
+++ b/experience.html
@@ -28,7 +28,7 @@
               height="34"
               class="d-inline-block align-text-center"
             />
-            <b>Ludovic SCHIARATURA</b>
+            <b>L.S.</b>
           </a>
           <button
             class="navbar-toggler"
@@ -98,7 +98,7 @@
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                   <div class="accordion-body bg-dark text-light"><strong class="text-info">Février 1986 - Octobre 1987 -Lille et La Rochelle</strong></br>
-                  <p>--Electromécanicien de poste au métro le Lille Ligne 1, Maintenance et dépannage installations électriques provisoires de chantier, Soudure, Oxycoupage.</br>
+                  <p>--Electromécanicien de poste au métro de Lille Ligne 1, Maintenance et dépannage installations électriques provisoires de chantier, Soudure, Oxycoupage.</br>
                      --A partir de Juin 1991 départ sur La Rochelle comme électromécanicien de maintenance sur lanceur de voussoirs et centrales à béton.</p></div>
                 </div>
               </div>
