--- a/formations.html
+++ b/formations.html
@@ -146,7 +146,7 @@
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
                                 <img src="./img/logo_educationnational.webp" class="card-img-top size-img-card" alt="logo education nationale">
                                 <div class="card-body text-center">
-                                  <p class="card-text"><strong><u class="text-info">1982 et 1983</u></strong> Obtention du CAP et BEP électromécanique au lycée Allede de Bethune</p>
+                                  <p class="card-text"><strong><u class="text-info">1982 et 1983</u></strong> Obtention du CAP et BEP électromécanique au lycée Allende de Bethune</p>
                                 </div>
                                 <div class="card-footer text-body-light mt-4">
                                     <i class="bi bi-star-fill text-info"></i>
