proofreading and spelling correction.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="big-text">Je suis agent logistique et maintenance préventive</div>
           <p class="description fs-4">
             Actuellement, je gère du matériel au sein du
-            service logistique d'une entreprise de bâtiment. Venez me découvir
+            service logistique d'une entreprise de bâtiment. Venez me découvrir
             en détail ci-dessous...
           </p>
           <div class="btn-container">
